src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --green-dark: #072610;
  --violet-dark: #3c004d;
  --black-dark: #001200;
  --purple-dark: #220037;
  --purple-light: #71009a;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-green-dark: var(--green-dark);
  --color-violet-dark: var(--violet-dark);
  --color-black-dark: var(--black);
  --color-purple-dark: var(--purple-dark);
  --color-purple-light: var(--purple-light);
  --font-sans: "Protest Strike", sans-serif;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: "Protest Strike", sans-serif;
}
@font-face {
  font-family: "Protest Strike";
  src: url("/fonts/ProtestStrike-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Arial Rounded";
  src: url("/fonts/arial.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Hit the Road";
  src: url("/fonts/hitroad.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "ARLRDBD";
  src: url("/fonts/arlrdbd.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

.font-arial-rounded {
  font-family: "Arial Rounded", sans-serif;
}

.font-hitroad {
  font-family: "Hit the Road", sans-serif;
}

.font-arlrdbd {
  font-family: "ARLRDBD", sans-serif;
}

.wkw-scrollbar {
  overflow-y: auto;
}
.wkw-scrollbar::-webkit-scrollbar {
  width: 8px;
}
.wkw-scrollbar::-webkit-scrollbar-track {
  border-radius: 0;
  background-color: #f3f4f6;
}
.wkw-scrollbar::-webkit-scrollbar-thumb {
  border-radius: 0;
  background-color: #d1d5db;
}
@media (prefers-color-scheme: dark) {
  .wkw-scrollbar::-webkit-scrollbar-track {
    background-color: black;
  }
  .wkw-scrollbar::-webkit-scrollbar-thumb {
    background-color: #ffffff;
    border-radius: 12px;
  }
}

